kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/access-logs: 'true'
spec:
  rules:
  - host: myflask-service.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myflask-service
            port:
              number: 5000
